--- a/src/app/components/big-card/big-card.component.html
+++ b/src/app/components/big-card/big-card.component.html
@@ -1,7 +1,7 @@
 <div class="container_big-card">
   <div class="big-card__photo">
     <img
-     src="https://cdn.britannica.com/49/182849-050-4C7FE34F/scene-Iron-Man.jpg"
+     src="{{photoCover}}"
       alt=""
       height="200px"
 
@@ -9,12 +9,12 @@
 
   </div>
   <div class="big-card__name">
-     <h1><a href="#"> Saiu a nova versão do Angular</a></h1>
+     <h1><a href="#"> {{ cardTitle }}</a></h1>
   </div>
   <div class="big-card__description">
     <p>
       <a href="#">
-      bla bla bla bla blabla
+      {{cardDescript}}
     </a>
     </p>
   </div>
