--- a/src/app/components/small-card/small-card.component.html
+++ b/src/app/components/small-card/small-card.component.html
@@ -3,7 +3,7 @@
   <div class="container__small-card-content">
     <div class="small-card__photo">
     <img
-     src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ_HDBxKeSbanSvNldRwo8PdUE5SLdtXfqUFg&usqp=CAU"
+     src="{{photoSmallCard}}"
       alt=""
       height="200px"
 
@@ -11,7 +11,7 @@
 
   </div>
   <div class="small-card__name">
-     <h1><a href="#"> Saiu a nova versão do Angular</a></h1>
+     <h1><a href="#"> {{contentSmallCard}}</a></h1>
 
   </div>
   <div class=".container__small-card__separator">
