--- a/src/app/components/menu-title/menu-title.component.html
+++ b/src/app/components/menu-title/menu-title.component.html
@@ -1,6 +1,5 @@
-<div class="menu__title__container">
-<hr>
-<h1>João Vitor</h1>
-<hr>
-
+<div class="container__menu-title">
+  <hr/>
+  <h1>JOÃO BLOG</h1>
+  <hr/>
 </div>
