--- a/src/app/components/big-card/big-card.component.css
+++ b/src/app/components/big-card/big-card.component.css
@@ -1,30 +1,31 @@
-.container_big-card {
+.container__big-card{
 
-  margin-left: 10px;
+  margin-left: 20px;
   margin-right: 20px;
+
   width: 400px;
   height: 500px;
+
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   justify-content: flex-start;
 }
 
-.big-card__name > h1 {
+.big-card__title > h1  {
   margin-top: 15px;
   font-size: 20px;
 }
-.big-card__description {
+
+.big-card__description{
   margin-top: 20px;
 }
 
-.big-card__description > p  > a{
-
+.big-card__description > p > a {
   color: grey;
 }
 
-.big-card__photo > img {
-
+.big-card__photo > img{
   width: 100%;
   min-width: 400px;
 }
