--- a/src/app/components/big-card/big-card.component.html
+++ b/src/app/components/big-card/big-card.component.html
@@ -1,21 +1,23 @@
-<div class="container_big-card">
+<div class="container__big-card">
+
   <div class="big-card__photo">
     <img
-     src="{{photoCover}}"
+      src="{{ photoCover }}"
       alt=""
       height="200px"
-
-       srcset="">
-
+      srcset=""
+    >
   </div>
-  <div class="big-card__name">
-     <h1><a href="#"> {{ cardTitle }}</a></h1>
+
+  <div class="big-card__title">
+    <h1><a [routerLink]="['content', Id]">{{ cardTitle }}</a></h1>
   </div>
+
   <div class="big-card__description">
     <p>
-      <a href="#">
-      {{cardDescript}}
-    </a>
+      <a [routerLink]="['content', Id]">
+          {{ cardDescription }}
+      </a>
     </p>
   </div>
 
