--- a/src/app/components/menu-title/menu-title.component.css
+++ b/src/app/components/menu-title/menu-title.component.css
@@ -1,8 +1,8 @@
-.menu__title__container {
-color: white;
+.container__menu-title{
+  color: white;
 }
 
-.menu__title__container >h1 {
+.container__menu-title > h1{
   margin-top: 15px;
   margin-bottom: 15px;
   font-size: 135px;
@@ -11,9 +11,7 @@ color: white;
   justify-content: center;
 }
 
-.menu__title__container > hr {
+.container__menu-title > hr{
   margin-top: 20px;
   margin-bottom: 5px;
-
-
 }
